--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>L
+<!DOCTYPE html>
 <!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en">
 <head>
@@ -23,8 +23,5 @@
       <button>Clear All</button>
     </div>
   </div>
-
-  <script src="script.js"></script>
-
 </body>
 </html>
